--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "papa-talk",
+  "name": "sms-papa",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "appBundleId": "com.lamp.smspapa",
+  "helperBundleId": "com.lamp.smspapa.helper",
+  "description": "An app for sending messages to Papa",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/atom/electron-quick-start.git"
+    "url": "git+https://github.com/glamp/sms-papa.git"
   },
   "keywords": [
     "Electron",
@@ -20,10 +22,19 @@
   "license": "CC0-1.0",
   "homepage": "https://github.com/atom/electron-quick-start#readme",
   "devDependencies": {
-    "electron-prebuilt": "^0.36.0"
+    "async": "^1.5.1",
+    "electron-packager": "^5.1.0",
+    "electron-prebuilt": "0.35.5",
+    "lodash": "^3.10.1",
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "rimraf": "^2.5.0"
   },
   "dependencies": {
+    "electron-builder": "^2.5.0",
     "handlebars": "^4.0.5",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "moment": "^2.11.0",
+    "moment-timezone": "^0.5.0"
   }
 }
