--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sms",
     "papa"
   ],
-  "author": "Greg Lamp <lamp.greg@gmail.com"",
+  "author": "Greg Lamp <lamp.greg@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "async": "^1.5.1",
