--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "sms-papa",
+  "name": "hoot",
+  "productName": "Hoot",
   "version": "1.0.0",
   "appBundleId": "com.lamp.smspapa",
   "helperBundleId": "com.lamp.smspapa.helper",
@@ -10,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/glamp/sms-papa.git"
+    "url": "git+https://github.com/glamp/hoot.git"
   },
   "keywords": [
     "Electron",
